apps/observability/loki/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    name: loki
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
