apps/observability/loki/ingressroute-loki.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: loki
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.xrs444.net`)
      kind: Rule
      services:
        - name: loki
          port: 3100
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
